<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/ic_background_first">

    <TextView
        android:id="@+id/tv_harmony_chk_cards"
        style="@style/Roboto.White.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimens36"
        android:text="@string/harmony_checking" />

    <TextView
        android:id="@+id/tv_cards_chk_title"
        style="@style/Roboto.White.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_harmony_chk_cards"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimens16"
        android:gravity="center"
        android:text="@string/happy_to_help_you_one_card" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvMoodCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_cards_chk_title"
        android:layout_margin="@dimen/dimens16"
        app:cardElevation="@dimen/dimens8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMoodCardTitle"
                style="@style/Roboto.DarkYellow.28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens100"
                android:text="@string/test" />

            <ImageView
                android:id="@+id/ivMoodCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/one_card"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>