<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens18"
        android:layout_marginStart="@dimen/dimens18"
        android:layout_marginTop="@dimen/dimens18">

        <EditText
            android:id="@+id/etEmail"
            style="@style/Roboto.GreyText.14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/dimens13"
            android:paddingEnd="@dimen/dimens16"
            android:paddingStart="@dimen/dimens16"
            android:paddingTop="@dimen/dimens13" />

        <Button
            android:id="@+id/btnEmailClear"
            android:layout_width="@dimen/dimens16"
            android:layout_height="@dimen/dimens16"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/dimens16"
            android:background="@drawable/ic_clear_text"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvEnterValidEmail"
        style="@style/Roboto.Red.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens18"
        android:layout_marginTop="@dimen/dimens8"
        android:text="@string/enter_valid_email"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/Roboto.GreyText.14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens18"
        android:layout_marginStart="@dimen/dimens18"
        android:layout_marginTop="@dimen/dimens8"
        android:background="@color/colorWhite"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/dimens13"
        android:paddingEnd="@dimen/dimens16"
        android:paddingStart="@dimen/dimens16"
        android:paddingTop="@dimen/dimens13" />

    <TextView
        android:id="@+id/tvTooShortPassword"
        style="@style/Roboto.Red.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens18"
        android:layout_marginTop="@dimen/dimens8"
        android:text="@string/too_long_password"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/Roboto.White.15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens60"
        android:layout_marginBottom="@dimen/dimens8"
        android:layout_marginEnd="@dimen/dimens14"
        android:layout_marginStart="@dimen/dimens14"
        android:layout_marginTop="@dimen/dimens8"
        android:background="@color/colorGreyButton"
        android:enabled="false"
        android:padding="@dimen/dimens15" />
</LinearLayout>