<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/llBottomNavigationBar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/colorWhite"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/llRecordVoice"
        android:layout_width="@dimen/dimens0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivVoiceRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_record_voice"
            android:contentDescription="@string/record_voice" />

        <TextView
            android:id="@+id/tvBipCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_voice"
            style="@style/Roboto.Grey2.11" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDailyMood"
        android:layout_width="@dimen/dimens0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivDailyMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_daily_mood"
            android:contentDescription="@string/daily_harmony" />

        <TextView
            android:id="@+id/tvDailyMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_harmony"
            style="@style/Roboto.Blue.12" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVideos"
        android:layout_width="@dimen/dimens0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivVideos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_videos"
            android:contentDescription="@string/videos" />

        <TextView
            android:id="@+id/tvVideos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videos"
            style="@style/Roboto.Grey2.11" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSettings"
        android:layout_width="@dimen/dimens0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_settings"
            android:contentDescription="@string/settings" />

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            style="@style/Roboto.Grey2.11" />
    </LinearLayout>
</LinearLayout>